--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -3,7 +3,7 @@
   "name": "app",
   "version": "0.0.0",
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxt generate",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
