moved the login page to the new setup

--- a/.env.example
+++ b/.env.example
@@ -38,4 +38,5 @@ ENABLE_PHONE_SIGNUP='false'
 ENABLE_PHONE_AUTOCONFIRM='false'
 
 # Shared ***********************************************************
-NUXT_PUBLIC_WEBAPP_URL='http://localhost:3000'
+NUXT_PUBLIC_API_URL='http://localhost:5001'
+NUXT_PUBLIC_AUTH_URL='http://localhost:9999'
