--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,10 +11,14 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .output"
   },
   "devDependencies": {
+    "@nuxt/postcss8": "^1.1.3",
+    "autoprefixer": "^10.4.7",
     "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
     "eslint-config-custom": "*",
     "nuxt": "3.0.0-rc.3",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2",
     "tsconfig": "*",
     "ui": "*"
   }
