--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "jest",
     "build": "vite build && vue-tsc --emitDeclarationOnly && mv dist/src dist/types",
-    "dev": "vite --port 3010",
+    "dev": "yarn build",
     "serve": "view preview",
     "lint": "eslint --ext .ts,.js,.vue . --fix",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
@@ -27,10 +27,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
     "jest": "^26.6.3",
+    "postcss": "^8.4.14",
     "scripts": "*",
+    "tailwindcss": "^3.1.2",
     "tsconfig": "*",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
